Fixed breadcrumb when preceding base ref. Fixed dashboard doughnutchart overflowing. Added not optimized prod build to test on production environment if needed

--- a/backend-ui/src/app/ui/dashboard/dashboard.component.scss
+++ b/backend-ui/src/app/ui/dashboard/dashboard.component.scss
@@ -1,4 +1,6 @@
 :host {
+    // width: 100%;
+    display: block;
     .btn-group {
         .btn {
             font-size: inherit;
