--- a/backend-ui/src/app/ui/wrapper/wrapper.component.scss
+++ b/backend-ui/src/app/ui/wrapper/wrapper.component.scss
@@ -16,6 +16,7 @@
             display: flex;
             flex-direction: column;
             width: 100%;
+            overflow: hidden;
             &_content {
                 padding: 20px 20px 20px 20px;
                 background-color: white;
